Added Countdown feature while site is in offline mode.

--- a/gk_music_free/language/en-GB.tpl_gk_music_free.ini
+++ b/gk_music_free/language/en-GB.tpl_gk_music_free.ini
@@ -15,6 +15,7 @@ TPL_GK_LANG_TEMPLATE_COLOR="Template color"
 TPL_GK_LANG_TEMPLATE_COLOR_DESC="You can select the template color style"
 TPL_GK_LANG_COLOR_1="Style I"
 TPL_GK_LANG_COLOR_2="Style II"
+TPL_GK_LANG_COLOR_3="Style III"
 TPL_GK_LANG_DEFAULT_LAYOUT="Default layout"
 TPL_GK_LANG_DEFAULT_LAYOUT_DESC="Defines layout file used on website"
 TPL_GK_LANG_PRINT_LAYOUT="Print layout"
@@ -446,5 +447,12 @@ TPL_GK_LANG_JS_COMPRESSION_DESC="You can enable/disable JS compression"
 TPL_GK_LANG_EXCLUDEJSCSS="Excluded JS/CSS"
 TPL_GK_LANG_EXCLUDEJSCSS_DESC="Here you can specify which files should be not compressed. Please separate files by comma like css/k2.css,com_k2/js/k2.js"
 
-
+COM_TEMPLATES_OFFLINE_SETTINGS_FIELDSET_LABEL="Offline Settings"
+TPL_GK_LANG_COUNTDOWN_DATE="Countdown Date:"
+TPL_GK_LANG_COUNTDOWN_DATE_DESC="Please enter a date or select from date button, following formats are accepted, yyyy/mm/dd hh:mm:ss 2012-08-31 12:00:00 or 2012-08-31 on its own time will become 00:00:00"
+TPL_GK_LANG_COUNTDOWN_OFFLINE_MSG="We will be back online at: "
+TPL_GK_LANG_COUNTDOWN_DAYS="Days"
+TPL_GK_LANG_COUNTDOWN_HOURS="Hours"
+TPL_GK_LANG_COUNTDOWN_MINUTES="Minutes"
+TPL_GK_LANG_COUNTDOWN_SECONDS="Seconds"
 
